5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1795_1601.log
== TEST (2019-05-30 16:03:08) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:04:06) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:04:30) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(max[])

-- ERROR:
File "XXXX", line 5
    print(max[])
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:01) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
while (i < size(tcc))

print(max[])

-- ERROR:
File "XXXX", line 5
    while (i < size(tcc))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:06) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
while (i < size(tcc))


-- ERROR:
File "XXXX", line 5
    while (i < size(tcc))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:40) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		tcc = max([])



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:48) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		tcc = max([i])



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:31) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		tcc = max([i])
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:40) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		tcc = max([i])
		i = i + 1
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:53) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		tcc = max([i])
		i = i + 1
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:25) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: "))

print(max, tcc)
		



-- ERROR:
File "XXXX", line 5
    print(max, tcc)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:36) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: "))

print(max, (tcc))
		



-- ERROR:
File "XXXX", line 5
    print(max, (tcc))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:31) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: "))

print(max, dtype = int)
	
-- ERROR:
File "XXXX", line 5
    print(max, dtype = int)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:43) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: "))

print(max, dtype = int[tcc])
	
-- ERROR:
File "XXXX", line 5
    print(max, dtype = int[tcc])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:51) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: "))

print(max, dtype = int[0])
	
-- ERROR:
File "XXXX", line 5
    print(max, dtype = int[0])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:34) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:42) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:54) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		print(max(tcc))
		
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:25) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
	while (i < size(tcc)):
		i = i + 1
print(max(tcc))
		
		



-- ERROR:
File "XXXX", line 5
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:02) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

	while (i < size(tcc)):
		i = i + 1
print(max(tcc))
		
		



-- ERROR:
File "XXXX", line 6
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:48) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

	while (i < size(tcc)):
		i = i + 1
print(max(tcc))
		
		



-- ERROR:
File "XXXX", line 6
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:57) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
print(max(tcc))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:05) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
print(max(tcc))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:51) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
print(max(tcc))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:06) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(max(tcc[]))
		
		



-- ERROR:
File "XXXX", line 5
    print(max(tcc[]))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:10) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(max(tcc[i]))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:28) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

print(max(tcc[i]))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:59) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0
while(i < size(tcc))
print(max(tcc[i]))
		
		



-- ERROR:
File "XXXX", line 6
    while(i < size(tcc))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:10) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))


print(max(tcc[""]))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:16) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))


print(max(tcc[""]))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))


print(max(tcc[]))
		
		



-- ERROR:
File "XXXX", line 6
    print(max(tcc[]))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:43) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))


print(max(tcc[]))
		
		



-- ERROR:
File "XXXX", line 6
    print(max(tcc[]))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:47) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))


print(max(tcc))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:28) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

tcc[i] = array
print(max(tcc))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:38) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

tcc[i] = array
print(max(tcc[i]))
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:42) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

tcc[i] = array
print(max(tcc[i]))

		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:49) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

tcc[i] = array
print(max(tcc[i]))

		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:02) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

tcc[i] = array(i + 1)
print(max(tcc[i]))

		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:11) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

tcc[i] = array(i + 1)
print(max(tcc[i]))

		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:50) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

vetor = (max, dtype=int)
-- ERROR:
File "XXXX", line 5
    vetor = (max, dtype=int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:45) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i < size(tcc))


-- ERROR:
File "XXXX", line 7
    while(i < size(tcc))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:50) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while (i < size(tcc))


-- ERROR:
File "XXXX", line 7
    while (i < size(tcc))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:54) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

	while (i < size(tcc))


-- ERROR:
File "XXXX", line 7
    while (i < size(tcc))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:00) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

	while (i < size(tcc)):
		


-- ERROR:
File "XXXX", line 7
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:28) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

	while (i < size(tcc)):
		tcc[i] = [i]


-- ERROR:
File "XXXX", line 7
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:33) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

	while (i < size(tcc)):
		


-- ERROR:
File "XXXX", line 7
    while (i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:37) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:43) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:51) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:09) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print([0])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:27) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(tcc[0])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:46) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(tcc[0])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:52) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(tcc[0])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:04) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(tcc[0])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:22) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = i + 1

print(tcc[i])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:38) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = i + 1

print(tcc[i])


		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:12) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= tcc <= i)




		


-- ERROR:
File "XXXX", line 7
    while(i <= tcc <= i)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:15) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= tcc <= i):




		


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:26) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc)




		


-- ERROR:
File "XXXX", line 7
    while(i > tcc)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:29) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):




		


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:42) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):




		


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:42) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):




		


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:43) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):




		


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:46) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):




		


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:00) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i > tcc):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:40) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:21) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max(tcc[i]))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:21) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max(tcc[i]))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:21) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max(tcc[i]))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:21) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max(tcc[i]))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:23) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max(tcc[i]))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:23) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max(tcc[i]))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max( tcc[i] ))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max( tcc[i] ))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max( tcc[i] ))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	print(max( tcc[i] ))
	i = i + 1




		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:39) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

i = 0

while(i <= size(tcc)):
	if(max(tcc))
	




		


-- ERROR:
File "XXXX", line 8
    if(max(tcc))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:49) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(arange(max(tcc)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:49) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(array(max(tcc)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:55) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(array(max(tcc)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:41) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print((max(tcc)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(max(tcc)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:22) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(max(tcc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:33) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))

print(max(tcc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:02) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

 if(tcc [i])
-- ERROR:
File "XXXX", line 7
    if(tcc [i])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:51) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

 if(tcc [i] == max(tcc)):
		print(i)
		i = i + 1
-- ERROR:
File "XXXX", line 7
    if(tcc [i] == max(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:23) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc))
 if(tcc [i] == max(tcc)):
		print(i)
		i = i + 1
-- ERROR:
File "XXXX", line 7
    while ( i < size(tcc))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:32) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		print(i)
		i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:57) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:32) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:43) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:51) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:23) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:34) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:41) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:49) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])/10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:56) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])/10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:00) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])/100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:09) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])/100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i]/10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:40) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i]/10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:46) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:30) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:37) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:27) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0


while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:42) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:03) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:36) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:10) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
print(i)
	i = i + 1
		

-- ERROR:
File "XXXX", line 8
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:14) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
   print(i)
	i = i + 1
		

-- ERROR:
File "XXXX", line 8
    print(i)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:18) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
      print(i)
	i = i + 1
		

-- ERROR:
File "XXXX", line 8
    print(i)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:24) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:34) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:46) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:03) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:09) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:14) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(max[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(max[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:54) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:59) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:01) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:34) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:48) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:54) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:03) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:12) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:21) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:25) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = (max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:30) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = (max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:44) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = (max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:01) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = (max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:10) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:20) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:55) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
print(max(tcc))

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:09) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

	while ( i < size(tcc)):
		if(tcc [i] == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
File "XXXX", line 6
    while ( i < size(tcc)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:16) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:27) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc (i) == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:35) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc (i) == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:46) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:59) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:28) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max([i])
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:42) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max([i])
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:19) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max(i)
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:27) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max(i)
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:49) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = int(max(i))
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:18) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max(i)
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:26) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max(i)
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:46) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0
v = max[i]
while ( i < size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:06:05) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- EXECUTION TIME:
1108.75
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:07:03) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- EXECUTION TIME:
1144.8
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:07:03) 
-- CODE:
from numpy import*

tcc = array(eval(input("Tempo de chegada dos corredores: ")))
i = 0

while ( i <= size(tcc)):
	if(tcc [i] == max(tcc)):
		i = i + 1
print([i])
-- EXECUTION TIME:
1146.56
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
